Update 4. Template Literals.md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/4. Template Literals.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/4. Template Literals.md
@@ -1,8 +1,10 @@
-4. Template Literals
-Template literals are essentially string literals that include embedded expressions.
+## 4. Template Literals
 
-Denoted with backticks ( `` ) instead of single quotes ( '' ) or double quotes ( "" ), template literals can contain placeholders which are represented using ${expression}. This makes it much easier to build strings.
+Template literals are essentially **string literals that include embedded expressions**.
+
+Denoted with **backticks** ( `` ) (**alt96**) instead of single quotes ( '' ) or double quotes ( "" ), template literals can contain placeholders which are represented using **${expression}**. This makes it much easier to build strings.
 
 Here's the previous examples using template literals.
-
+```javascript
 let message = `${student.name} please see ${teacher.name} in ${teacher.room} to pick up your report card.`;
+```
