Update 4. Template Literals.md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/4. Template Literals.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/4. Template Literals.md
@@ -8,3 +8,22 @@ Here's the previous examples using template literals.
 ```javascript
 let message = `${student.name} please see ${teacher.name} in ${teacher.room} to pick up your report card.`;
 ```
+
+#### QUIZ
+
+**Instructions**: Change the `greeting` string to use a template literal.
+```javascript
+const myName = '[NAME]';
+const greeting = 'Hello, my name is ' + myName;
+console.log(greeting);
+```
+
+#### My Solution
+
+```javascript
+const myName = 'Samuele';
+const greeting = `Hello, my name is ${myName}`;
+console.log(greeting);
+```
+
+**TIP**: Embedded expressions inside template literals can do more than just reference variables. You can perform operations, call functions and use loops inside embedded expressions!
