--- a/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/6. Destructuring.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/6. Destructuring.md
@@ -11,3 +11,27 @@ let [first, second, third] = positions;
 2. Gabrielle
 3. **Jarrod** ![rispostaGiusta]
 4. Walter 
+
+#### QUESTION 2 OF 2
+
+What do you expect to be returned from calling `getArea()`?
+```javascript
+const circle = {
+  radius: 10,
+  color: 'orange',
+  getArea: function() {
+    return Math.PI * this.radius * this.radius;
+  },
+  getCircumference: function() {
+    return 2 * Math.PI * this.radius;
+  }
+};
+
+let {radius, getArea, getCircumference} = circle;
+```
+1. 314.1592653589793
+2. **NaN** ![rispostaGiusta]
+3. 62.83185307179586
+4. pie
+
+[rispostaGiusta]: https://github.com/el3um4s/100-days-of-code/blob/master/Udacity/ES6%20-%20JavaScript%20Improved/icon-tick.png
