Update 7. Quiz: Destructuring Arrays (1-3).md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/7. Quiz: Destructuring Arrays (1-3).md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/7. Quiz: Destructuring Arrays (1-3).md
@@ -1,3 +1,34 @@
-## Quiz: Destructuring Arrays (1-3)
+## 7. Quiz: Destructuring Arrays (1-3)
 
 #### Directions
+
+Use array destructuring to pull out the three **colors** from the array of things and store them into the variables `one`, `two`, and `three`.
+```javascript
+const things = ['red', 'basketball', 'paperclip', 'green', 'computer', 'earth', 'udacity', 'blue', 'dogs'];
+
+const one = things;
+const two = '';
+const three = '';
+
+const colors = `List of Colors
+1. ${one}
+2. ${two}
+3. ${three}`;
+
+console.log(colors);
+```
+
+
+#### My Solution
+```javascript
+const things = ['red', 'basketball', 'paperclip', 'green', 'computer', 'earth', 'udacity', 'blue', 'dogs'];
+
+const [one,,, two,,,,three] = things;
+
+const colors = `List of Colors
+1. ${one}
+2. ${two}
+3. ${three}`;
+
+console.log(colors);
+'''
