--- a/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/13. Quiz: Writing a For...of Loop (1-4).md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/13. Quiz: Writing a For...of Loop (1-4).md
@@ -6,6 +6,7 @@ Write a `for...of` loop that:
 * loops through each day in the `days` array
 * capitalizes the first letter of the day
 * and prints the day out to the console
+
 Your code should log the following to the console:
 ```
 Sunday
@@ -15,4 +16,10 @@ Wednesday
 Thursday
 Friday
 Saturday
+```
+**Your Code:**
+```javascript
+const days = ['sunday', 'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday'];
+
+// your code goes here
 ```
