Update 13. Quiz: Writing a For...of Loop (1-4).md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/13. Quiz: Writing a For...of Loop (1-4).md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/13. Quiz: Writing a For...of Loop (1-4).md
@@ -17,9 +17,22 @@ Thursday
 Friday
 Saturday
 ```
-**Your Code:**
+**The Start Code:**
 ```javascript
 const days = ['sunday', 'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday'];
 
 // your code goes here
+```
+
+#### My Solution
+```javascript
+const days = ['sunday', 'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday'];
+
+// your code goes here
+
+for (const day of days) {
+    //day = day.charAt(0).toUpperCase() + day.slice(1);
+    console.log(day.charAt(0).toUpperCase() + day.slice(1));
+}
+
 ```
