Update 14. Spread... Operator.md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/14. Spread... Operator.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/14. Spread... Operator.md
@@ -12,3 +12,26 @@ Prints:
 ```
 Don Quixote The Hobbit Alice in Wonderland Tale of Two Cities
 ```
+
+#### QUIZ
+
+Instructions: Use the spread operator to combine the `fruits` and `vegetables` arrays into the `produce` array.
+
+**The Start Code:**
+```javascript
+const fruits = ["apples", "bananas", "pears"];
+const vegetables = ["corn", "potatoes", "carrots"];
+
+const produce = [];
+
+console.log(produce);
+```
+#### My Solution
+```javascript
+const fruits = ["apples", "bananas", "pears"];
+const vegetables = ["corn", "potatoes", "carrots"];
+
+const produce = [...fruits, ...vegetables];
+
+console.log(produce);
+```
