--- a/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/16. Quiz: Using the Rest Parameter (1-5).md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/16. Quiz: Using the Rest Parameter (1-5).md
@@ -6,7 +6,25 @@ Use the rest parameter to create an `average()` function that calculates the ave
 
 **TIP**: Make sure to test your code with different values. For example,
 
-`average(2, 6)` should return `4`
-`average(2, 3, 3, 5, 7, 10)` should return `5`
-`average(7, 1432, 12, 13, 100)` should return `312.8`
-`average()` should return `0`
+`average(2, 6)` should return `4`  
+`average(2, 3, 3, 5, 7, 10)` should return `5`  
+`average(7, 1432, 12, 13, 100)` should return `312.8`  
+`average()` should return `0` 
+
+**The Start Code:**
+```javascript
+// your code goes here
+
+function average() {
+    
+}
+
+console.log(average(2, 6));
+console.log(average(2, 3, 3, 5, 7, 10));
+console.log(average(7, 1432, 12, 13, 100));
+console.log(average());
+```
+
+#### My Solution
+```javascript
+```
