Update 16. Quiz: Using the Rest Parameter (1-5).md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/16. Quiz: Using the Rest Parameter (1-5).md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 1 - Syntax/16. Quiz: Using the Rest Parameter (1-5).md
@@ -27,4 +27,32 @@ console.log(average());
 
 #### My Solution
 ```javascript
+// your code goes here
+
+function average1(...nums) {
+    if (nums.length === 0) return 0;
+    let somma = 0;
+    for (const num of nums){
+        somma+= num;
+    }
+    return (somma / nums.length);
+}
+
+function average2(...nums){
+    let somma = nums.reduce(function(accumulator, currentValue) {
+        return accumulator + currentValue;
+    },0);
+    
+    return nums.length === 0 ? 0 : somma / nums.length;
+
+}
+
+function average(...n) {
+     return n.length === 0 ? 0 : n.reduce((a, c) => a + c) / n.length;
+}
+
+console.log(average(2, 6));
+console.log(average(2, 3, 3, 5, 7, 10));
+console.log(average(7, 1432, 12, 13, 100));
+console.log(average());
 ```
