Update 02. Arrow Functions.md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/02. Arrow Functions.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/02. Arrow Functions.md
@@ -2,7 +2,20 @@
 
 #### QUIZ QUESTION
 
-Take a look at the following code:ù
-```
-```
+Take a look at the following code:
+```javascript
+const names = ['Afghanistan', 'Aruba', 'Bahamas', 'Chile', 'Fiji', 'Gabon', 'Luxembourg', 'Nepal', 'Singapore', 'Uganda', 'Zimbabwe'];
 
+const longNames = names.filter(function(name) {
+  return name.length > 6;
+});
+```
+Which of the following choices does the same thing, but replaces .filter()'s function with an arrow function?
+
+1. const longNames = names.filter( function(name)>= return name.length > 6;);
+2. const longNames = names.filter( return name.length > 6);
+3. const longNames = names.filter( return name => {name.length > 6});
+4. **const longNames = names.filter( name => name.length > 6);** ![rispostaGiusta]
+
+
+[rispostaGiusta]: https://github.com/el3um4s/100-days-of-code/blob/master/Udacity/ES6%20-%20JavaScript%20Improved/icon-tick.png
