Update 02. Arrow Functions.md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/02. Arrow Functions.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/02. Arrow Functions.md
@@ -17,5 +17,33 @@ Which of the following choices does the same thing, but replaces .filter()'s fun
 3. const longNames = names.filter( return name => {name.length > 6});
 4. **const longNames = names.filter( name => name.length > 6);** ![rispostaGiusta]
 
+#### QUESTION 1 OF 2
+
+Which of the following choices have correctly formatted arrow functions?
+
+```javascript
+// 1
+setTimeout(() => {
+  console.log('starting the test');
+  test.start();
+},2000);
+
+// 2
+javascript
+setTimeout( _ => {
+  console.log('starting the test');
+  test.start();
+}, 2000);
+
+// 3
+const vowels = 'aieou'-splir('');
+const bovVowels = vowels.map((letter)=> letter.toUppercase());
+
+// 4
+const vowels = 'aeiou'.split('');
+const bigVowels = vowels.map(letter => letter.toUpperCase() );
+```
+
+**Answer:**  each one of these is correct.
 
 [rispostaGiusta]: https://github.com/el3um4s/100-days-of-code/blob/master/Udacity/ES6%20-%20JavaScript%20Improved/icon-tick.png
