Update 02. Arrow Functions.md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/02. Arrow Functions.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/02. Arrow Functions.md
@@ -1,4 +1,4 @@
-## Arrow Functions
+## 2. Arrow Functions
 
 #### QUIZ QUESTION
 
@@ -45,5 +45,33 @@ const bigVowels = vowels.map(letter => letter.toUpperCase() );
 ```
 
 **Answer:**  each one of these is correct.
+
+
+#### QUESTION 2 OF 2
+
+Using your knowledge of how arrow functions work with automatic returns and curly braces, which of the following choices have correctly formatted arrow functions?
+
+```javascript
+// 1 OK
+const colors = ['red','blue','green','yellow','orange','black'];
+const crazyColors =  colors.map( color => {
+  const jumble = color.split('').reverse();
+  return jumble.join('')+'!';
+});
+
+// 2  No, non c'è il return!
+const colors = ['red','blue','green','yellow','orange','black'];
+const crazyColors = colors.map( color => {
+  color.split('').reverse().join('')+'!';
+});
+
+// 3  No, in questo caso non serve il return!
+const colors = ['red','blue','green','yellow','orange','black'];
+const crazyColors =  colors.map( color => return color.split('').reverse().join('')+'!');
+
+// 4 OK
+const colors = ['red','blue','green','yellow','orange','black'];
+const crazyColors = colors.map(color => color.split('').reverse().join('')+'!');
+```
 
 [rispostaGiusta]: https://github.com/el3um4s/100-days-of-code/blob/master/Udacity/ES6%20-%20JavaScript%20Improved/icon-tick.png
