Update 07. "this" and Regular Functions.md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/07. "this" and Regular Functions.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/07. "this" and Regular Functions.md
@@ -1,4 +1,4 @@
-## 7. "this" and Regular Functions.md
+## 7. "this" and Regular Functions
 
 To get a handle on how `this` works differently with arrow functions, let's do a quick recap of how `this` works in a standard function. If you have a solid grasp of how `this` works already, feel free to jump over this section.
 
