--- a/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/10. Defaults and Destructuring.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/10. Defaults and Destructuring.md
@@ -22,10 +22,27 @@ function houseDescriptor([houseColor = `green`, shutterColors = [`red`]]){
 which of the following choices will run without throwing an error?
 
 [ ] houseDescriptor('red', ['white', 'gray', 'pink']);
-[x] houseDescriptor(['green', ['white', 'gray']]);
+[x] houseDescriptor(['green', ['white', 'gray']]); ![rispostaGiusta]
 [ ] houseDescriptor(['blue', 'purple']);
-[x] houseDescriptor(['green']);
+[x] houseDescriptor(['green']); ![rispostaGiusta]
 
+#### QUESTION 2 OF 2
+
+Take a look at the following code:
+```javascript
+function houseDescriptor({houseColor = 'green', shutterColors = ['red']} = {}) {
+  return `I have a ${houseColor} house with ${shutterColors.join(' and ')} shutters`;
+}
+```
+Which of the following choices will run without throwing an error?
+
+[x] houseDescriptor({houseColor: 'red', shutterColors: ['white', 'gray', 'pink']});
+[x] houseDescriptor({houseColor: 'red'});
+[x] houseDescriptor();
+[x] houseDescriptor({shutterColors:['orange','blue']});
+[x] houseDescriptor({});
+
+**Answer**: `Actually, every single one of these function calls will work correctly!`
 
 
 [rispostaGiusta]: https://github.com/el3um4s/100-days-of-code/blob/master/Udacity/ES6%20-%20JavaScript%20Improved/icon-tick.png
