Update 10. Defaults and Destructuring.md

--- a/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/10. Defaults and Destructuring.md
+++ b/Udacity/ES6 - JavaScript Improved/Lesson 2 - Functions/10. Defaults and Destructuring.md
@@ -21,10 +21,10 @@ function houseDescriptor([houseColor = `green`, shutterColors = [`red`]]){
 ```
 which of the following choices will run without throwing an error?
 
-[ ] houseDescriptor('red', ['white', 'gray', 'pink']);
-[x] houseDescriptor(['green', ['white', 'gray']]); ![rispostaGiusta]
-[ ] houseDescriptor(['blue', 'purple']);
-[x] houseDescriptor(['green']); ![rispostaGiusta]
+- [ ] houseDescriptor('red', ['white', 'gray', 'pink']);
+- [x] houseDescriptor(['green', ['white', 'gray']]); ![rispostaGiusta]
+- [ ] houseDescriptor(['blue', 'purple']);
+- [x] houseDescriptor(['green']); ![rispostaGiusta]
 
 #### QUESTION 2 OF 2
 
@@ -36,11 +36,11 @@ function houseDescriptor({houseColor = 'green', shutterColors = ['red']} = {}) {
 ```
 Which of the following choices will run without throwing an error?
 
-[x] houseDescriptor({houseColor: 'red', shutterColors: ['white', 'gray', 'pink']});
-[x] houseDescriptor({houseColor: 'red'});
-[x] houseDescriptor();
-[x] houseDescriptor({shutterColors:['orange','blue']});
-[x] houseDescriptor({});
+- [x] houseDescriptor({houseColor: 'red', shutterColors: ['white', 'gray', 'pink']});
+- [x] houseDescriptor({houseColor: 'red'});
+- [x] houseDescriptor();
+- [x] houseDescriptor({shutterColors:['orange','blue']});
+- [x] houseDescriptor({});
 
 **Answer**: `Actually, every single one of these function calls will work correctly!`
 
